--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "mongoose": "^5.12.13",
     "pug": "^3.0.2"
   },
   "devDependencies": {
